# MiniGridRL-2026SpringPKUMultiAgent

./: .gitignore  README.md  codex.md  pyproject.toml  requirements.txt  train.py
report/: main.tex
script/: env_check.py  play_env.py  rollout_trace.py  run_seed_average.py  test_ckpt.py  watch_random_agent.py
src/: env.py  wrapper.py
src/minigridrl/: __init__.py
src/minigridrl.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/minigridrl/models/: __init__.py  ppo.py  q_learning.py
src/minigridrl/utils/: __init__.py  logging.py  obs.py  visualize.py
tmp/: env.py  env_check.py
