[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "minigridrl"
version = "0.1.0"
description = "Tabular Q-learning and PPO experiments for MiniGrid Dynamic Obstacles."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "minigrid",
    "numpy",
    "torch",
    "tqdm",
]

[tool.setuptools.packages.find]
where = ["src"]
